k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    project: devsecops-cicd
    environment: production
