k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app-service
  namespace: devsecops
  labels:
    app: devsecops-app
spec:
  type: LoadBalancer

  selector:
    app: devsecops-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
